# smarts

./: CMakeLists.txt
ertc/: .gitignore  CMakeLists.txt  ertc.cpp  ertc.hpp
ertc.nft/: .gitignore  CMakeLists.txt  ertc.nft.cpp  ertc.nft.hpp
prange/: prange.cpp  prange.hpp
